--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
-<h1>pasta</h1>
-<img src="/Users/arbesistrefi/Documents/GitHub/odin_recipes/recipes/images/pasta.jpg" alt="Italian Pasta">
+<h1>Chicken Pasta</h1>
+<img src="/Users/arbesistrefi/Documents/GitHub/odin_recipes/recipes/images/pasta.jpg" alt="chicken pasta">
 <h1>Ingredients</h1>
 <ul>
-    <li>Pasta</li>
-    <li>water</li>
-    <li>salt</li>
-    <li>pesto</li>
-  </ul>
+   <li> 4 tbsp olive oil</li>
+   <li> 1 onion , finely chopped</li>
+   <li>2 garlic cloves , crushed</li>
+   <li> ¼ tsp chilli flakes</li>
+   <li> ¼ tsp chilli flakes</li>
+   <li>1 tsp caster sugar</li>
+   <li>6 tbsp mascarpone</li>
+   <li>4 skinless chicken breasts, sliced into strips</li>
+   <li>300g penne</li>
+   <li> 70g mature cheddar , grated</li>
+   <li>50g grated mozzarella</li>
+   <li>½ small bunch of parsley , finely chopped</li>
+</ul>
+
   <h1>Steps to follow</h1>
   <ol>
-      <li>300ml Tap of water boiled</li>
-      <li>100g of pasta add to the tap</li>
-      <li>add salt and some oil</li>
-      <li>wait 8 minutes</li>
-      <li>add the pest sos over it</li>
-      <li>enjoy the meal</li>
+   <li>Heat 2 tbsp of the oil in a pan over a medium heat and fry the onion gently for 10-12 mins.
+       Add the garlic and chilli flakes and cook for 1 min. Tip in the tomatoes and sugar and season to taste. 
+       Simmer uncovered for 20 mins or until thickened, then stir through the mascarpone.</li>
+   
+   <li>Heat 1 tbsp of oil in a non-stick frying pan. 
+      Season the chicken and fry for 5-7 mins or until the chicken is cooked through.</li>
+   
+   <li>Heat the oven to 220C/200C fan/gas 7. Cook the penne following pack instructions.
+       Drain and toss with the remaining oil. Tip the pasta into a medium sized ovenproof dish. 
+       Stir in the chicken and pour over the sauce. Top with the cheddar, mozzarella and parsley.
+        Bake for 20 mins or until golden brown and bubbling.</li>
   </ol>
