--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
 <!DOCTYPE html>
 <h1>Odin Recipes</h1>
-<a href="recipes/pasta.html">Recipe Title</a>
+<ul>
+<li><a href="recipes/pasta.html">Chicken Pasta</a></li>
+<li><a href="recipes/pizza.html">Pizza</a></li>
+<li><a href="recipes/lasagna.html">Lasagne</a></li>
+</ul>
